--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="book9">
                 <a href="" class="b9"><img src="1603897566-image40-1.webp" alt="Defence from the skies"
                         title="Defence from the skies: يتكلم عن الدفاع بالطيارات" width="250" height="300">
-                    <div class="info">The Buuk Thief</div>
+                    <div class="info">The Book Thief</div>
                 </a>
             </div>
             <div class="book10">
